--- a/frontend/styles/Style.css
+++ b/frontend/styles/Style.css
@@ -19,7 +19,10 @@ h1 {
   margin: 30px auto;
   padding: 20px;
   border-radius: 8px;
-  text-align: center;
+}
+#code {
+  width: 100%;
+  height: 10vh;
 }
 
 #input input {
@@ -27,6 +30,13 @@ h1 {
   margin-top: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  text-align: center;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button {
@@ -56,7 +66,7 @@ h2 {
 }
 
 #result {
-  text-align: left;
+  text-align: justify;
 }
 
 #text {
@@ -64,3 +74,4 @@ h2 {
   margin-top: 10px;
   font-family: Arial, sans-serif;
 }
+
